add_subdirectory(b2j)
add_subdirectory(bt_peer)
add_subdirectory(file_transfer_from_peer)
add_subdirectory(get_torrent_from_peer)
add_subdirectory(ih2magnet)
add_subdirectory(magnet_resolver_daemon)
add_subdirectory(magnet_to_torrent)
add_subdirectory(torrent_collector)
add_subdirectory(torrent_collector2)
add_subdirectory(torrent_to_magnet)
add_subdirectory(utp)