add_subdirectory(bencoding)
add_subdirectory(bt)
add_subdirectory(config)
add_subdirectory(cui)
add_subdirectory(dht)
add_subdirectory(flow_control)
add_subdirectory(io_latency)
add_subdirectory(krpc)
add_subdirectory(public_ip)
add_subdirectory(signal)
add_subdirectory(store)
add_subdirectory(u160)
add_subdirectory(utils)
add_subdirectory(utp)
